libs/extractor/src/snapshots/extractor__tests__props_wrong_direct_array_select-7.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Flex } from \"@devup-ui/core\";\n<Flex opacity={[...arr, 1][5]} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "__devupValue0",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupValue0) => <div className=\"a b\" style={{ \"--c\": __devupValue0 }} />)([...arr, 1][5]);\n",
}
