libs/extractor/src/snapshots/extractor__tests__props_wrong_direct_object_select-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex opacity={{...rest, a:1, b:0.5}[\"nonexistent\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "({...rest,a:1,b:.5})[`nonexistent`]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment59) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment59?.[0] ?? \"\"}`} style={{ ...__devupAssignment59?.[1] }} />)(((__devupValue) => [\n\t\"OHdo1q_88e5vmeakz6\",\n\t{ \"---SUHdlu82mngh23j5d4a-a6\": __devupValue },\n\t__devupValue\n])({\n\t...rest,\n\ta: 1,\n\tb: .5\n}[\"nonexistent\"]));\n",
}
