libs/extractor/src/snapshots/extractor__tests__read_once_in_every_place.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(output)"
---
ToBTreeSet {
    styles: {},
    code: "import { jsx as _jsx } from \"react/jsx-runtime\";\nexport const a = async (f, g, list, C) => ((__devupSpread8, __devupSpread0, __devupSpread1, __devupSpread2, __devupSpread3, __devupSpread4, __devupSpread5, __devupSpread6, __devupSpread7) => <div {...__devupSpread8} data-x={__devupSpread0} aria-label=\"x\" disabled xlink:href={__devupSpread1} onClick={__devupSpread2} title={__devupSpread3} className={__devupSpread8?.className || \"\"} style={__devupSpread8?.style}>\n    text\n    {__devupSpread4}\n    {...__devupSpread5}\n    {__devupSpread6}\n    {__devupSpread7}\n    after\n  </div>)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), list, g, async () => await g(), ((DevupAs0) => <DevupAs0 />)(C || \"b\" || \"div\"), <>{g}</>, list(), <span>{g}</span>, await g());\nexport const b = function* (f, g) {\n\tyield ((__devupSpread10, __devupSpread9) => <div {...__devupSpread10} title={__devupSpread9} className={__devupSpread10?.className || \"\"} style={__devupSpread10?.style} />)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), yield g);\n};\nexport const c = (props) => _jsx(\"div\", props);\nexport const d = async (f, g) => ((__devupSpread11, __devupSpread12) => _jsx(\"div\", {\n\t...__devupSpread11,\n\t...__devupSpread12,\n\tclassName: `${__devupSpread12?.className || \"\"} ${__devupSpread11?.className || \"\"}`,\n\tstyle: {\n\t\t...__devupSpread12?.style,\n\t\t...__devupSpread11?.style\n\t}\n}))(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), { [g()]: await g() });\nexport const e = async (rest, g) => ((__devupSpread13, __devupSpread14) => _jsx(\"div\", {\n\tid: __devupSpread13,\n\t...__devupSpread14,\n\tclassName: __devupSpread14?.className || \"\",\n\tstyle: __devupSpread14?.style\n}))(await g(), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(rest));\nexport const h = (f, g, k) => ((__devupSpread15, __devupSpread16, __devupSpread17, __devupSpread18, __devupSpread19) => _jsx(\"div\", {\n\tonClick: __devupSpread15,\n\t...__devupSpread16,\n\t...__devupSpread17,\n\t...__devupSpread18,\n\ttitle: __devupSpread19,\n\tclassName: \"z\",\n\tstyle: {\n\t\t...__devupSpread18?.style,\n\t\t...__devupSpread17?.style,\n\t\t...__devupSpread16?.style\n\t}\n}))(g(), { [k]: 2 }, ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), { [k]: 1 }, \"x\");\nexport const i = (rest) => ((__devupSpread20) => _jsx(\"div\", {\n\t...__devupSpread20,\n\tclassName: \"a\",\n\tstyle: __devupSpread20?.style\n}))(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(rest));\nexport const j = (rest) => ((__devupSpread21) => <div {...__devupSpread21} className={__devupSpread21?.className || \"\"} style={__devupSpread21?.style} />)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))({ ...rest }));\n",
}
